Fixed hover state contrast issue with language button and added an underline style to the header navigation

--- a/src/themes/wetoverlay/styles/_theme_css_variable_overrides.scss
+++ b/src/themes/wetoverlay/styles/_theme_css_variable_overrides.scss
@@ -4,7 +4,7 @@
   //--ds-header-logo-height: 80px;
   //--ds-header-logo-height-xs: 50px;
   //--ds-header-icon-color: #{$link-color};
-  //--ds-header-icon-color-hover: #{darken($link-color, 15%)};
+  --ds-header-icon-color-hover: #{darken($link-color, 15%)};
   // Theme Variable overrides
 
 	// Body
